[docs] Migrate to OpenBAS

--- a/overrides/partials/comments.html
+++ b/overrides/partials/comments.html
@@ -2,7 +2,7 @@
   <h2 id="__comments">{{ lang.t("meta.comments") }}</h2>
   <!-- Insert generated snippet here -->
   <script src="https://giscus.app/client.js"
-        data-repo="OpenEx-Platform/docs"
+        data-repo="OpenBAS-Platform/docs"
         data-repo-id="R_kgDOJihe9A"
         data-category="General"
         data-category-id="DIC_kwDOJihe9M4CaJI5"
